kubernetes/deployment-service-booking.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: booking-service
  namespace: ahmed-event-booking  # Replace with your actual name
  labels:
    app: booking-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: booking-service
  template:
    metadata:
      labels:
        app: booking-service
    spec:
      containers:
        - name: booking-service
          image: event-booking-booking-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3003
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
          volumeMounts:
            - name: booking-data
              mountPath: /app/data
      volumes:
        - name: booking-data
          persistentVolumeClaim:
            claimName: booking-data-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: booking-service
  namespace: OnlineEventBookingYourName  # Replace with your actual name
spec:
  selector:
    app: booking-service
  ports:
    - port: 3003
      targetPort: 3003
  type: ClusterIP
