kubernetes/deployment-service-notification.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notification-service
  namespace: ahmed-event-booking  # Replace with your actual name
  labels:
    app: notification-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notification-service
  template:
    metadata:
      labels:
        app: notification-service
    spec:
      containers:
        - name: notification-service
          image: event-booking-notification-service:latest
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 3004
          resources:
            limits:
              cpu: "500m"
              memory: "512Mi"
            requests:
              cpu: "200m"
              memory: "256Mi"
---
apiVersion: v1
kind: Service
metadata:
  name: notification-service
  namespace: ahmed-event-booking  # Replace with your actual name
spec:
  selector:
    app: notification-service
  ports:
    - port: 3004
      targetPort: 3004
  type: ClusterIP
